# publish

./: .gitignore  GEMINI.md  Makefile  README.md
.agents/skills/ui-design/: SKILL.md
.gemini/: GEMINI.md
.github/workflows/: static.yml  vite-deploy.yml
apps/client/: index.html  package-lock.json  package.json
apps/client/src/: App.tsx  main.tsx
apps/client/src/components/: AppLogo.tsx  AppSidebar.tsx  AppSidebarHeader.tsx  InteractiveSimulator.tsx  NavMain.tsx  NavSubscription.tsx  NavUser.tsx  UserInfo.tsx
apps/client/src/css/: app.css
client/: index.html  package-lock.json  package.json
client/src/: App.tsx
client/src/components/: AppSidebar.tsx  AppSidebarHeader.tsx  Breadcrumbs.tsx  NavMain.tsx  NavUser.tsx
client/src/css/: app.css
client/src/pages/: Dashboard.tsx  Welcome.tsx
client/src/routes/: auth.tsx  index.tsx
docs/: README.md
docs/architecture/: component-diagram.md  deployment-topology.md  request-flow.md  scaling.md  system-overview.md
docs/decisions/: ADR-0001-fastapi.md  ADR-0002-redis-streams.md  ADR-0003-at-least-once.md  ADR-0004-checkpointing.md  ADR-0005-idempotency.md  ADR-0006-postgresql.md
docs/diagrams/: architecture.mmd  checkpoint-recovery.mmd  deployment.mmd  job-lifecycle.mmd  lease-recovery.mmd  message-lifecycle.mmd  retry-flow.mmd  scaling.mmd  sequence-publish.mmd  worker-state.mmd
docs/distributed-systems/: backpressure.md  checkpointing.md  consistency-model.md  delivery-semantics.md  failure-model.md  idempotency.md  invariants.md  leasing.md  recovery.md  retry-strategy.md
docs/messaging/: consumer-groups.md  dead-letter-queue.md  message-lifecycle.md  pending-entry-list.md  redis-streams.md  xautoclaim.md
docs/observability/: alerts.md  dashboards.md  logging.md  metrics.md  tracing.md
docs/operations/: configuration.md  deployment.md  disaster-recovery.md  runbook.md  troubleshooting.md
docs/performance/: benchmarks.md  bottlenecks.md  load-testing.md  optimization.md
docs/storage/: database-schema.md  indexing.md  persistence.md  state-manager.md  transactions.md
docs/testing/: chaos-testing.md  failure-injection.md  integration.md  reliability-tests.md  strategy.md
gateway/app/: .gitignore  Dockerfile  config.py  enums.py  http_client.py  main.py  openapi_merger.py  pyproject.toml
gateway/app/routes/v1/: dlq.py  identity.py  jobs.py  social_accounts.py  social_posts.py
gateway/app/tests/: test_circuit_breaker.py
infrastructure/: docker-compose.yaml  task.md  walkthrough.md
infrastructure/k6/: smoke-test.js
infrastructure/observability/: otel-collector-config.yaml  prometheus.yml
services/identity-service/: .dockerignore  Dockerfile  alembic.ini  database.py  main.py  pyproject.toml  schemas.py  worker.py
services/identity-service/alembic/: env.py
services/identity-service/alembic/versions/: 4649874fbd09_create_users_table.py  5a6fcd32972c_create_users_table.py  9e3d927f4816_create_users_table.py  fef4c6877fb8_add_users_and_verify_email_tables.py
services/identity-service/app/: config.py  database.py  main.py  models.py
services/identity-service/app/auth/: __init__.py
services/identity-service/app/users/: models.py  router.py  schemas.py  service.py
services/identity-service/app/users/models/: EmailVerification.py  User.py
services/shared/: pyproject.toml
services/shared/shared/: telemetry.py
services/social-account-service/: alembic.ini  main.py  pyproject.toml
services/social-account-service/alembic/: env.py
services/social-post-service/: Dockerfile  main.py  pyproject.toml
services/social-publish-service/: main.py
(+73 files in other folders)
