[project]
name = "gateway"
version = "0.1.0"
description = "AD. Publish gateway"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "ad-tech-inc-resilient-http>=0.2.3",
    "redis>=8.0.1",
]

[dependency-groups]
dev = ["pytest>=9.1.1", "pytest-asyncio>=1.4.0", "ruff>=0.15.21", "ty>=0.0.59"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.ty]
