[project]
name = "identity"
version = "0.1.0"
description = "AD. Publish identity service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
]