[project]
name = "identity"
version = "0.1.0"
description = "AD. Publish identity service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "sqlalchemy[asyncio]>=2.0.51",
    "asyncpg>=0.31.0",
    "alembic>=1.18.5",
    "redis>=8.0.1",
    "pwdlib[argon2]>=0.3.0",
    "structlog>=26.1.0",
    "pyjwt>=2.13.0",
]

[dependency-groups]
dev = ["pytest>=9.1.1", "pytest-asyncio>=1.4.0", "ruff>=0.15.21", "ty>=0.0.59"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]

[tool.ty]
