[project]
name = "social-account-service"
version = "0.1.0"
description = "Social account service"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.0",
    "httpx>=0.28.1",
    "shared",
    "sqlalchemy>=2.0.38",
    "alembic>=1.14.1",
    "asyncpg>=0.30.0",
]

[tool.uv.sources]
shared = { path = "../../services/shared" }
